auto-test/tests/chapter_18/invalid_types/tag_resolution/incomplete_shadows_complete.c
struct s {
    int a;
};

int main(void) {
    struct s;  
    struct s *x;
    x->a = 10;  
    return 0;
}